--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.1",
     "@astrojs/sitemap": "^3.4.1",
+    "@astrojs/vercel": "^8.2.2",
     "@playform/inline": "^0.1.2",
     "astro": "^5.12.0",
     "astro-og-canvas": "^0.7.0",
@@ -36,7 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
     "eslint": "^9.31.0",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
